rag-tavily/rag-tavily-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-tavily
  namespace: llama-cpp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-tavily
  template:
    metadata:
      labels:
        app: rag-tavily
      namespace: llama-cpp
    spec:
      nodeSelector:
        audiomuse-ai: allowed
      containers:
        - name: rag
          image: docker.io/library/rag-tavily:1.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: rag-tavily
  namespace: llama-cpp
spec:
  selector:
    app: rag-tavily
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
